--- a/world.css
+++ b/world.css
@@ -35,4 +35,32 @@ button{
 }
 
 
+table{
+    margin:1rem;
+     text-align:left;  
+}
 
+table th{
+    padding:1em 0.2em;
+    text-align:center;
+    margin:1em 0;
+    border:2px solid #152D35;
+    background-color: #05090a;
+    color:#fff;
+
+}
+
+table td{
+    padding: .5em;
+    text-align:center;
+    border:2px solid #152D35;
+}
+
+table tr{
+    padding:2em;
+}
+
+ table  tr:hover {
+     background-color: #05090a;
+    color:#fff;
+ } 
